--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,18 @@ body {
   background-position: left top;
   font-family: "Zilla Slab", serif;
 }
+.nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.nav a {
+  text-decoration: none;
+  font-size: 2rem;
+  font-family: "Courier New", Courier, monospace;
+  color: #fff;
+  cursor: pointer;
+}
 
 .box-container {
   width: 70%;
@@ -39,7 +51,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding-left: 5rem;
+  padding: 3rem;
   color: white;
   font-size: 32px;
   background-color: #171717;
